--- a/src/presentacion/MainFrm.form
+++ b/src/presentacion/MainFrm.form
@@ -781,10 +781,10 @@
                   <Layout>
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jLabel2" max="32767" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jLabel2" min="-2" pref="215" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -807,9 +807,9 @@
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/img/Aula.gif"/>
+                          <Image iconType="3" name="/img/Lista.gif"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Realizar Movimiento"/>
+                        <Property name="text" type="java.lang.String" value="Cuentas Disponibles"/>
                       </Properties>
                     </Component>
                   </SubComponents>
