--- a/src/presentacion/FrmBancaPorInternet.form
+++ b/src/presentacion/FrmBancaPorInternet.form
@@ -24,19 +24,19 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="dspFondo" min="-2" max="-2" attributes="0"/>
+              <Component id="dspFondo3" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="dspFondo" min="-2" max="-2" attributes="0"/>
+          <Component id="dspFondo3" min="-2" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JDesktopPane" name="dspFondo">
+    <Container class="javax.swing.JDesktopPane" name="dspFondo3">
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="10"/>
       </AuxValues>
