--- a/src/presentacion/IFrmActualizarParametro.form
+++ b/src/presentacion/IFrmActualizarParametro.form
@@ -110,7 +110,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Parametro"/>
+                <Property name="text" type="java.lang.String" value="Par&#xe1;metro"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -213,7 +213,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="0" green="0" red="0" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Ingrese Codigo:"/>
+                <Property name="text" type="java.lang.String" value="Ingrese C&#xf3;digo:"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
