--- a/src/presentacion/RegistrarCuenta.form
+++ b/src/presentacion/RegistrarCuenta.form
@@ -430,6 +430,9 @@
                 <Property name="text" type="java.lang.String" value="Validar"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnValidarActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel8">
               <Properties>
