--- a/src/presentacion/IFrmTransferirSaldoEmpleado.form
+++ b/src/presentacion/IFrmTransferirSaldoEmpleado.form
@@ -210,6 +210,7 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="(codigo de cuenta)"/>
                 <Property name="toolTipText" type="java.lang.String" value="(codigo de cuenta )"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCuentaActionPerformed"/>
