--- a/src/presentacion/MainFrm.form
+++ b/src/presentacion/MainFrm.form
@@ -571,7 +571,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Eurabank Services"/>
+                    <Property name="text" type="java.lang.String" value="Eureka Bank Services"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="fecha1">
@@ -1203,7 +1203,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jLabel16" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace pref="696" max="32767" attributes="0"/>
+                                  <EmptySpace pref="665" max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="fecha" min="-2" max="-2" attributes="0"/>
@@ -1245,7 +1245,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Eurabank Services"/>
+                    <Property name="text" type="java.lang.String" value="Eureka Bank Services"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="fecha">
