--- a/src/presentacion/IFrmListaMovimiento.form
+++ b/src/presentacion/IFrmListaMovimiento.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.ButtonGroup" name="orden">
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
       <Border info="org.netbeans.modules.form.compat2.border.CompoundBorderInfo">
@@ -141,7 +145,7 @@
         <Container class="javax.swing.JPanel" name="jPanel1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="e" green="f" red="44" type="rgb"/>
+              <Color blue="40" green="41" red="84" type="rgb"/>
             </Property>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
@@ -186,6 +190,9 @@
             </Component>
             <Component class="javax.swing.JRadioButton" name="rbtncodCuenta">
               <Properties>
+                <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+                  <ComponentRef name="orden"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Codigo Cuenta"/>
               </Properties>
               <Events>
@@ -194,6 +201,9 @@
             </Component>
             <Component class="javax.swing.JRadioButton" name="rbtncodEmpleado">
               <Properties>
+                <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+                  <ComponentRef name="orden"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Codigo Empleado"/>
               </Properties>
               <Events>
